[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["tom5079 <7948651+tom5079@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flup6 = "^1.1.1"
requests = "^2.28.1"
firebase-admin = "^6.0.0"
redis = "^4.3.4"
Flask = "^2.2.2"
python-dotenv = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
